--- a/local-docker/docker-compose.services.yml
+++ b/local-docker/docker-compose.services.yml
@@ -19,7 +19,7 @@ services:
     ports:
       - "44044:44044"
     healthcheck:
-      test: [ "CMD", "grpc_health_probe", "-addr=localhost:50051" ]
+      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44044" ]
       interval: 10s
       timeout: 3s
       retries: 3
@@ -45,9 +45,13 @@ services:
     ports:
       - "44045:44045"
     healthcheck:
-      test: [ "CMD", "grpc_health_probe", "-addr=localhost:50051" ]
+      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44045" ]
       interval: 10s
       timeout: 3s
       retries: 3
     depends_on:
       - postgres
+networks:
+  backend:
+    name: backend
+    external: true
