feat(user-delete): implement delete actions in auth service
# Conflicts:
#	services/auth-service/src/model/user.go
#	services/auth-service/src/repository/auth.go

--- a/local-docker/.env
+++ b/local-docker/.env
@@ -1,3 +1,11 @@
 TASK_SERVICE_CONFIG_PATH=./config/dev.yaml
 TEAM_SERVICE_CONFIG_PATH=./config/dev.yaml
 USER_SERVICE_CONFIG_PATH=./config/dev.yaml
+AUTH_SERVICE_CONFIG_PATH=./config/dev.yaml
+
+JWT_SECRET=00022b2c922ac34e1dec4497df8be73b
+USER_SERVICE_ADDR=user-service:44044
+
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=postgres
