feat: implement base of board service

--- a/local-docker/.env.example
+++ b/local-docker/.env.example
@@ -1,7 +1,8 @@
-TASK_SERVICE_CONFIG_PATH=./config/config.yaml
-TEAM_SERVICE_CONFIG_PATH=./config/config.yaml
-USER_SERVICE_CONFIG_PATH=./config/config.yaml
-AUTH_SERVICE_CONFIG_PATH=./config/config.yaml
+TASK_SERVICE_CONFIG_PATH=./config/config.example.yaml
+BOARD_SERVICE_CONFIG_PATH=./config/config.example.yaml
+TEAM_SERVICE_CONFIG_PATH=./config/config.example.yaml
+USER_SERVICE_CONFIG_PATH=./config/config.example.yaml
+AUTH_SERVICE_CONFIG_PATH=./config/config.example.yaml
 
 JWT_SECRET=00022b2c922ac34e1dec4497df8be73b
 USER_SERVICE_ADDR=user-service:44044
