--- a/local-docker/docker-compose.services.yml
+++ b/local-docker/docker-compose.services.yml
@@ -18,11 +18,11 @@ services:
         max-file: "3"
     ports:
       - "44044:44044"
-    healthcheck:
-      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44044" ]
-      interval: 10s
-      timeout: 3s
-      retries: 3
+#    healthcheck:
+#      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44044" ]
+#      interval: 10s
+#      timeout: 3s
+#      retries: 3
     depends_on:
       kafka:
         condition: service_healthy
@@ -47,11 +47,11 @@ services:
         max-file: "3"
     ports:
       - "44045:44045"
-    healthcheck:
-      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44045" ]
-      interval: 10s
-      timeout: 3s
-      retries: 3
+#    healthcheck:
+#      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44045" ]
+#      interval: 10s
+#      timeout: 3s
+#      retries: 3
     depends_on:
       kafka:
         condition: service_healthy
@@ -76,11 +76,11 @@ services:
         max-file: "3"
     ports:
       - "44046:44046"
-    healthcheck:
-      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44045" ]
-      interval: 10s
-      timeout: 3s
-      retries: 3
+#    healthcheck:
+#      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44046" ]
+#      interval: 10s
+#      timeout: 3s
+#      retries: 3
     depends_on:
       kafka:
         condition: service_healthy
@@ -101,13 +101,37 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-    healthcheck:
-      test: [ "CMD", "grpc_health_probe", "-addr=localhost:50051" ]
-      interval: 10s
-      timeout: 3s
-      retries: 3
+#    healthcheck:
+#      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44049" ]
+#      interval: 10s
+#      timeout: 3s
+#      retries: 3
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+  board-service:
+    build:
+      context: ../services/board-service
+      dockerfile: ../../local-docker/dockerfiles/board.dockerfile
+    networks:
+      - backend
+    ports:
+      - "44048:44048"
+    env_file:
+      - .env.example
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+#    healthcheck:
+#      test: [ "CMD", "grpc_health_probe", "-addr=localhost:44048" ]
+#      interval: 10s
+#      timeout: 3s
+#      retries: 3
+    depends_on:
+      postgres:
+        condition: service_healthy
   saga-orchestrator:
     build:
       context: ../services/saga-orchestrator
