refactor(task/board-services): add checks from clients

--- a/services/board-service/config/config.yaml
+++ b/services/board-service/config/config.yaml
@@ -20,3 +20,7 @@ kafka:
     flushTimeout: 500ms
     batchSize: 100
     compression: snappy
+clients:
+  userClientAddr: "user-service:44044"
+  teamClientAddr: "team-service:44045"
+  clientTimeout: 30s
