--- a/services/task-service/config/config.example.yaml
+++ b/services/task-service/config/config.example.yaml
@@ -13,3 +13,7 @@ db:
   max_open_connections: 10
   max_idle_connections: 5
   max_lifetime: 60
+clients:
+  userClientAddr: "user-service:44044"
+  boardClientAddr: "board-service:44048"
+  clientTimeout: 30s
